This file documents the revision history for the Open Monitoring Distribution (Labs Edition)

next:
          - thruk:
            - lmd update to 2.2.0
          - naemon:
            - update to 1.4.2
            - livestatus update to 1.4.2
          - plugins:
            - check_nsc_web update to 0.7.2
            - check_ntp_health update to 1.5.0.1
            - check_nwc_health update to 11.3.0.4
            - check_ups_health update to 4.1.1
            - check_vsphere update to 0.3.5
          - gearman:
            - mod-gearman-worker-go update to 1.5.1
          - grafana:
            - update to 10.3.1
          - prometheus:
            - update to 2.45.4
          - coshsh update to 10.2.1.3
          - omdnotificationforwarder update to 2.4.1
          - pnp4nagios update to 9ee65f7

5.30     Jan 29 2024
          - Thruk: update to 3.12
          - LMD: Update 2.1.9
          - Monitoring-Plugins: update to 2.3.5
          - Gearman:
            - Mod-Gearman module update 5.1.3
            - update mod-gearman-worker-go to 1.3.8
          - VictoriaMetrics 1.93.1 (LTS)
          - Prometheus
            - Prometheus 2.45.2
            - alertmanager 0.26.0
            - pushgateway 1.6.0
            - node_exporter 1.7.0
          - Grafana:
            - update to 10.2.3
            - loki update to 2.9.3
            - update thruk datasource to 2.0.4
            - enable wal for internal sqlite db
          - Histou update to 0.5.1
          - Go builds updated to 1.21.6

5.20     Jul 22 2023
          - OMD:
            - add build support for Debian 12
          - Thruk: update to 3.08.3
          - LMD: Update 2.1.6
          - Gearman:
            - update mod-gearman-worker-go to 1.3.7
            - Mod-Gearman module update 5.1.2
          - Grafana:
            - update to 9.5.6
            - update pnp datasource to 2.0.2
            - update thruk datasource to 2.0.3
          - Plugins:
            - update check_testssl to 3.0.8