@@ -4,12 +4,6 @@ NAME = omd
 VERSION = $(OMD_VERSION)
 SHELL = /bin/bash
 
-ifeq ($(DISTRO_NAME),SLES)
-    DEFAULT_RUNLEVELS=2 3 5
-else
-    DEFAULT_RUNLEVELS=2 3 4 5
-endif
-
 .PHONY: skel
 
 build:
@@ -29,13 +23,11 @@ install:
 	mkdir -p $(DESTDIR)$(OMD_ROOT)/share/man/man8
 	install -m 644 omd.8 $(DESTDIR)$(OMD_ROOT)/share/man/man8
 	gzip $(DESTDIR)$(OMD_ROOT)/share/man/man8/omd.8
-	install -m 755 omd.init $(DESTDIR)$(OMD_ROOT)/share/omd/omd.init
 	install -m 644 omd.service $(DESTDIR)$(OMD_ROOT)/share/omd/omd.service
 	# TasksMax has been introduced with systemd 226
 	if test -x /usr/bin/systemctl && [ $$(systemctl --version | head -n1 | awk {'print $$2'}) -ge 226 ]; then \
 		sed -i $(DESTDIR)$(OMD_ROOT)/share/omd/omd.service -e 's/^#TasksMax=/TasksMax=/g'; \
 	fi
-	sed -i 's|###DEFAULT_RUNLEVELS###|$(DEFAULT_RUNLEVELS)|g' $(DESTDIR)$(OMD_ROOT)/share/omd/omd.init
 	mkdir -p $(DESTDIR)$(OMD_ROOT)/share/doc/$(NAME)
 	install -m 644 COPYING AUTHORS $(DESTDIR)$(OMD_ROOT)/share/doc/$(NAME)
 	mkdir -p $(DESTDIR)$(OMD_ROOT)/lib/omd
