@@ -1,57 +1,0 @@
-#!/bin/sh
-# Startskript for OMD sites
-# chkconfig: - 98 1
-# description: OMD Open Monitoring Distribution
-
-
-### BEGIN INIT INFO
-# Provides:          omd
-# Required-Start:    $syslog
-# Required-Stop:     $syslog
-# Should-Start:      $network $remote_fs ntpdate
-# Default-Start:     ###DEFAULT_RUNLEVELS###
-# Default-Stop:      0 1 6
-# Short-Description: OMD sites
-# Description:       Start and stop the sites of the Open Monitoring
-#                    Distribution (OMD)
-### END INIT INFO
-
-# -- start omd, if not disabled in /etc/default/omd
-AUTOSTART=1
-[ -r /etc/default/omd ] && . /etc/default/omd
-case "$1" in
-    start)
-    if [ "$AUTOSTART" = "1" ]; then
-        echo "Starting all OMD monitoring sites:"
-        /usr/bin/omd "$1"
-    else
-        echo "OMD autostart disabled, skipping ..."
-    fi
-    ;;
-    stop)
-        echo "Stopping all OMD monitoring sites:"
-        /usr/bin/omd "$1"
-    ;;
-    restart)
-        echo "Restarting all OMD monitoring sites:"
-        /usr/bin/omd "$1"
-    ;;
-    reload)
-        echo "Reloading all OMD monitoring sites:"
-        /usr/bin/omd "$1"
-    ;;
-    status)
-        echo "Checking state of all OMD monitoring sites:"
-        /usr/bin/omd "$1"
-    ;;
-    '')
-        echo "usage: $PROGNAME start|stop|restart|reload|status"
-        exit 1
-    ;;
-    *)
-        echo "Doing $1 on all OMD monitoring sites:"
-        /usr/bin/omd "$1"
-    ;;
-esac
-
-
