@@ -1,6 +1,8 @@
 This file documents the revision history for the Open Monitoring Distribution (Labs Edition)
 
 next:
+          - omd:
+            - remove /etc/init.d/omd, all systems use systemd now
           - thruk:
             - lmd update to 2.2.0
           - naemon:
